# gain-rss

./: .gitignore  README.md  pyproject.toml  update_feed.py
.github/workflows/: update-feed.yml
adhoc/: backfill.ipynb
data/: gain_feed.duckdb  gain_feed.xml
