[project]
name = "gain-rss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "duckdb>=1.3.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
